# djinn-compiler

./: README.md  bun.lockb  djinn.code-workspace  djinn.opam  dune-project  index.ts  test.dj  test1.dj
_build/: log
benchmarks/: README.md
compiler/: README.md  biome.json  package.json  variable-immutability.md
compiler/legacy/: index.ts  test.dj
documentation/: bun.lockb  docusaurus.config.ts  package.json  tailwind.config.js
documentation/plugins/: tailwind-config.cjs
documentation/src/pages/: markdown-page.md
legacy/: README.md  package.json
legacy/runtime/: environment.ts  values.ts
legacy/runtime/interpreter/: expressions.ts
legacy/src/: parser.ts
runtime/: environment.ts  interpreter.ts  values.ts
runtime/interpreter/: expressions.ts  statements.ts
src/: README.md  ast.ts  dune  lexer.ts  main.ml  parser.ts
src/ast/: ast.ml  ast.mli  ast_types.ml  dune
src/frontend/: README.md
src/llvm-backend/: README.md
src/parsing/: dune  lexer.mll  lexer_parser.ml  parsed_ast.ml  parser.mly
test/: dune
tests/: README.md
